--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -13,7 +13,7 @@ $titleFont : myriad-std-tilt, sans-serif;
 
 $largeFont : 'Six Caps', sans-serif;
 $smallFont: 'kepler-std,' serif;
-$bodyFont: 'helvetica-neue', sans-serif;
+$bodyFont: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
 
 
