--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,9 @@
 body {
   font-family: sans-serif;
   background-color: vars.$darkBrown;
+  color: vars.$beige;
+  font-family: vars.$bodyFont;
+  font-weight: 600;
 }
 
 /* 
