--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -8,7 +8,7 @@ $beige: #E8E1D7;
 
 
 // fonts
-$titleFont : myriad-std-tilt, sans-serif;
+$titleFont : 'myriad-std-tilt', sans-serif;
 
 
 $largeFont : 'Six Caps', sans-serif;
