--- a/src/components/Me/index.scss
+++ b/src/components/Me/index.scss
@@ -68,7 +68,7 @@
       grid-column: 1;
       height: 100%;
       &__block {
-        background-image: url('../../assets/images/dev.jpg');
+        background-image: url('../../assets/images/me.jpg');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -121,51 +121,14 @@
       grid-column: 2;
       height: 100%;
       &__block {
-        background-image: url('../../assets/images/me.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        color: vars.$darkBrown;
+        background-color: vars.$orange;
+        color: vars.$beige;
         height: 100%;
         align-items: center;
         vertical-align: center;
         width: 100%;
         position: relative;
-        &__mainTitle {
-          display: block;
-          width: 100%;
-          position: relative;
-          z-index: 10;
-          &__small__title {
-            display: block;
-            font-size: (vars.$bigGutter)*1.7;
-            font-family: vars.$smallFont;
-            font-style: italic;
-            text-transform: uppercase;
-            text-align: center;
-          }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*7);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
-        }
-         &__description {
-            position: absolute;
-            width: 100%;
-            bottom: (vars.$bigGutter)*1;
-            text-align: center;
-            font-size: vars.$smallGutter;
-          }
-          &__expand {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.65) rotate(20deg);
-            transform: scale(0.65);
-            transition: all .2s ease-in-out;
-          }
+        padding: vars.$bigGutter;
       }
     }
     &__competences {
@@ -173,10 +136,7 @@
       grid-column: 1; 
       height: 100%;
       &__block {
-        background-image: url('../../assets/images/blog.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+        background-color: vars.$lightBrown;
         color: vars.$darkBrown;
         height: 100%;
         align-items: center;
@@ -184,48 +144,7 @@
         width: 100%;
         position: relative;
         color: vars.$yellow;
-        &__mainTitle {
-          display: block;
-          width: 100%;
-          position: relative;
-          z-index: 10;
-          &__small__title {
-            display: block;
-            font-size: (vars.$bigGutter)*1.5;
-            font-family: vars.$smallFont;
-            font-style: italic;
-            text-transform: uppercase;
-            text-align: center;
-          }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*8);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
-        }
-         &__description {
-            position: absolute;
-            width: 100%;
-            bottom: (vars.$bigGutter)*1;
-            text-align: center;
-            font-size: vars.$smallGutter;
-          }
-          &__shrink {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0);
-            transform: scale(0);
-            transition: all .2s ease-in-out;
-          }
-          &__expand {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.8);
-            transform: scale(0.8)  rotate(20deg);
-            transition: all .2s ease-in-out;
-          }
+        padding: vars.$bigGutter;
       }
     }
     &__experience {
@@ -233,10 +152,7 @@
       grid-column: 2;
       height: 100%;
       &__block {
-        background-image: url('../../assets/images/contact.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+        background-color: vars.$darkRed;
         color: vars.$darkBrown;
         height: 100%;
         align-items: center;
@@ -244,42 +160,7 @@
         width: 100%;
         position: relative;
         color: vars.$yellow;
-        &__mainTitle {
-          display: block;
-          width: 100%;
-          position: relative;
-          z-index: 10;
-          text-shadow: 1px  1px 2px vars.$lightBrown;
-          &__small__title {
-            display: block;
-            font-size: (vars.$bigGutter)*1.3;
-            font-family: vars.$smallFont;
-            font-style: italic;
-            text-transform: uppercase;
-            text-align: center;
-          }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*11.5);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
-        }
-         &__description {
-            position: absolute;
-            width: 100%;
-            bottom: (vars.$bigGutter)*2;
-            text-align: center;
-            font-size: vars.$smallGutter;
-          }
-          &__expand {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.8) rotate(20deg);
-            transform: scale(0.8) rotate(20deg);
-            transition: all .2s ease-in-out;
-          }
+        padding: vars.$bigGutter;
       }
     }
     &__hobbies {
@@ -287,51 +168,14 @@
       grid-column: 1;
       height: 100%;
       &__block {
-        background-image: url('../../assets/images/me.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+        background-color: vars.$orange;
         color: vars.$darkBrown;
         height: 100%;
         align-items: center;
         vertical-align: center;
         width: 100%;
         position: relative;
-        &__mainTitle {
-          display: block;
-          width: 100%;
-          position: relative;
-          z-index: 10;
-          &__small__title {
-            display: block;
-            font-size: (vars.$bigGutter)*1.7;
-            font-family: vars.$smallFont;
-            font-style: italic;
-            text-transform: uppercase;
-            text-align: center;
-          }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*7);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
-        }
-         &__description {
-            position: absolute;
-            width: 100%;
-            bottom: (vars.$bigGutter)*1;
-            text-align: center;
-            font-size: vars.$smallGutter;
-          }
-          &__expand {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.65) rotate(20deg);
-            transform: scale(0.65);
-            transition: all .2s ease-in-out;
-          }
+        padding: vars.$bigGutter;
       }
     }
     &__formation {
@@ -339,51 +183,13 @@
       grid-column: 2;
       height: 100%;
       &__block {
-        background-image: url('../../assets/images/me.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+        background-color: vars.$yellow;
         color: vars.$darkBrown;
         height: 100%;
         align-items: center;
         vertical-align: center;
-        width: 100%;
         position: relative;
-        &__mainTitle {
-          display: block;
-          width: 100%;
-          position: relative;
-          z-index: 10;
-          &__small__title {
-            display: block;
-            font-size: (vars.$bigGutter)*1.7;
-            font-family: vars.$smallFont;
-            font-style: italic;
-            text-transform: uppercase;
-            text-align: center;
-          }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*7);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
-        }
-         &__description {
-            position: absolute;
-            width: 100%;
-            bottom: (vars.$bigGutter)*1;
-            text-align: center;
-            font-size: vars.$smallGutter;
-          }
-          &__expand {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.65) rotate(20deg);
-            transform: scale(0.65);
-            transition: all .2s ease-in-out;
-          }
+        padding: vars.$bigGutter;
       }
     }
   }
