--- a/src/components/DevProjects/index.scss
+++ b/src/components/DevProjects/index.scss
@@ -107,13 +107,6 @@
             text-align: center;
             font-size: vars.$smallGutter;
           }
-          &__expand {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.8);
-            transform: scale(0.8);
-            transition: all .2s ease-in-out;
-          }
       }
     }
     &__kikiveu {
@@ -121,24 +114,45 @@
       grid-column: 2;
       height: 100%;
       &__block {
-        background-color: vars.$orange;
-        color: vars.$beige;
+        background-image: url('../../assets/images/dev.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        color: vars.$darkBrown;
         height: 100%;
+        display: flex;
         align-items: center;
         vertical-align: center;
         width: 100%;
         position: relative;
-        padding: vars.$bigGutter;
-        display: flex;
-        align-items: center;
-        vertical-align: center;
-        &__description {
-          font-family: vars.$smallFont;
-          font-size: (vars.$bigGutter)/1.3;
-          line-height: (vars.$bigGutter);
-          text-align: center;
-          font-weight: 400;
+        &__mainTitle {
+          display: block;
+          width: 100%;
+          position: relative;
+          z-index: 10;
+          &__small__title {
+            display: block;
+            font-size: (vars.$bigGutter)*1.5;
+            font-family: vars.$smallFont;
+            font-style: italic;
+            text-transform: uppercase;
+            text-align: center;
+          }
+          &__big__title {
+            display: block;
+            font-size:( vars.$bigGutter*10);
+            font-family: vars.$largeFont;
+            text-transform: uppercase;
+            text-align: center;
+          } 
         }
+         &__description {
+            position: absolute;
+            width: 100%;
+            bottom: (vars.$bigGutter)*2;
+            text-align: center;
+            font-size: vars.$smallGutter;
+          }
       }
     }
     &__blog {
@@ -146,15 +160,45 @@
       grid-column: 1; 
       height: 100%;
       &__block {
-        background-color: vars.$lightBrown;
+        background-image: url('../../assets/images/dev.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
         color: vars.$darkBrown;
         height: 100%;
+        display: flex;
         align-items: center;
         vertical-align: center;
         width: 100%;
         position: relative;
-        color: vars.$beige;
-        padding: vars.$bigGutter;
+        &__mainTitle {
+          display: block;
+          width: 100%;
+          position: relative;
+          z-index: 10;
+          &__small__title {
+            display: block;
+            font-size: (vars.$bigGutter)*1.5;
+            font-family: vars.$smallFont;
+            font-style: italic;
+            text-transform: uppercase;
+            text-align: center;
+          }
+          &__big__title {
+            display: block;
+            font-size:( vars.$bigGutter*10);
+            font-family: vars.$largeFont;
+            text-transform: uppercase;
+            text-align: center;
+          } 
+        }
+         &__description {
+            position: absolute;
+            width: 100%;
+            bottom: (vars.$bigGutter)*2;
+            text-align: center;
+            font-size: vars.$smallGutter;
+          }
       }
     }
     &__api{
@@ -162,15 +206,45 @@
       grid-column: 2;
       height: 100%;
       &__block {
-        background-color: vars.$darkRed;
+        background-image: url('../../assets/images/dev.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
         color: vars.$darkBrown;
         height: 100%;
+        display: flex;
         align-items: center;
         vertical-align: center;
         width: 100%;
         position: relative;
-        color: vars.$beige;
-        padding: vars.$bigGutter;
+        &__mainTitle {
+          display: block;
+          width: 100%;
+          position: relative;
+          z-index: 10;
+          &__small__title {
+            display: block;
+            font-size: (vars.$bigGutter)*1.5;
+            font-family: vars.$smallFont;
+            font-style: italic;
+            text-transform: uppercase;
+            text-align: center;
+          }
+          &__big__title {
+            display: block;
+            font-size:( vars.$bigGutter*10);
+            font-family: vars.$largeFont;
+            text-transform: uppercase;
+            text-align: center;
+          } 
+        }
+         &__description {
+            position: absolute;
+            width: 100%;
+            bottom: (vars.$bigGutter)*2;
+            text-align: center;
+            font-size: vars.$smallGutter;
+          }
       }
     }
     &__toDoList {
@@ -178,14 +252,45 @@
       grid-column: 1;
       height: 100%;
       &__block {
-        background-color: vars.$orange;
+        background-image: url('../../assets/images/dev.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
         color: vars.$darkBrown;
         height: 100%;
+        display: flex;
         align-items: center;
         vertical-align: center;
         width: 100%;
         position: relative;
-        padding: vars.$bigGutter;
+        &__mainTitle {
+          display: block;
+          width: 100%;
+          position: relative;
+          z-index: 10;
+          &__small__title {
+            display: block;
+            font-size: (vars.$bigGutter)*1.5;
+            font-family: vars.$smallFont;
+            font-style: italic;
+            text-transform: uppercase;
+            text-align: center;
+          }
+          &__big__title {
+            display: block;
+            font-size:( vars.$bigGutter*10);
+            font-family: vars.$largeFont;
+            text-transform: uppercase;
+            text-align: center;
+          } 
+        }
+         &__description {
+            position: absolute;
+            width: 100%;
+            bottom: (vars.$bigGutter)*2;
+            text-align: center;
+            font-size: vars.$smallGutter;
+          }
       }
     }
   }
