--- a/src/microComponents/Aside/index.scss
+++ b/src/microComponents/Aside/index.scss
@@ -1,7 +1,8 @@
 @use '../../styles/vars';
 
 .aside {
-  position : relative;
+  position : fixed;
+  height: 100%;
     &__link {
         transform: rotate(-90deg);
         -webkit-transform: rotate(-90deg);
