--- a/src/microComponents/Aside/index.scss
+++ b/src/microComponents/Aside/index.scss
@@ -2,13 +2,19 @@
 
 .aside {
   position : fixed;
-  height: 100%;
+  height: 90%;
+  display: flex;
+  flex-direction: column-reverse;
+  bottom: 0;
+  justify-content: flex-start;
     &__link {
+      display: inline-block;
         transform: rotate(-90deg);
         -webkit-transform: rotate(-90deg);
         -moz-transform: rotate(-90deg);
         -ms-transform: rotate(-90deg);
         -o-transform: rotate(-90deg);
-        margin:  calc(100% + 10rem) 0 0 0; 
+        margin-bottom : 7rem;
+        text-align: center;
     }
 }
