--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -3,6 +3,9 @@
 
 .home {
     display: flex;
+    margin-left: (vars.$bigGutter)*5;
+    margin-right: (vars.$bigGutter)*5;
+    max-width: 100%;
     &__squares {
       &__flex {
         display: flex;
@@ -70,28 +73,14 @@
     }
 }
 
-.home__squares_test {
-    columns: 2 500px;
-    max-height: 800px;
-    margin-left: -8px; /* Adjustment for the gutter */
-    width: 100%;
-}
-
-.home__squares_test > * {
-  width: 400px;
-  height: 400px;
-  border: 2px solid #fff;
-  background-color: blue;
-  margin: 0 8px 8px 0; /* Some gutter */
-}
-
 .home__module {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(12, 1fr);
-  width: 80vw;
+  width: 100%;
   list-style: none;
   display: grid;
   height: 120vh;
+  
   &__square {
     grid-column: 1;
     position: relative;
@@ -201,7 +190,7 @@
           }
       }
     }
-    &__blog {
+    &__uxUi {
       grid-row: span 5;
       grid-column: 1; 
       height: 100%;
