--- a/src/components/DevProjectModal/index.scss
+++ b/src/components/DevProjectModal/index.scss
@@ -1,21 +1,18 @@
 @use '../../styles/vars';
 
 
-.home {
+.devProjects {
     display: flex;
     margin-left: (vars.$bigGutter)*5;
-    margin-right: (vars.$bigGutter)*5;
-    max-width: 100%;
     &__squares {
       &__flex {
         display: flex;
-        &__projects {
+        &__block {
           width:  40vw;
           background-image: url('../../assets/images/dev.jpg');
           background-repeat: no-repeat;
           background-position: center;
           background-size: cover;
-          height: 80vh;
           &__title {
             display: flex;
             flex-direction: column;
@@ -46,46 +43,29 @@
         }
         &__aboutMe {
           width:  40vw;
-          background-image: url('../../assets/images/me.jpg');
+          background-image: url('../../assets/images/dev.jpg');
           background-repeat: no-repeat;
           background-position: center;
           background-size: cover;
           height: 70vh;
         }
-        &__blog {
-          width:  40vw;
-          background-image: url('../../assets/images/blog.jpg');
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: cover;
-          height: 40vh;
-        }
-        &__contact {
-          width:  40vw;
-          background-image: url('../../assets/images/contact.jpg');
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: cover;
-          height: 40vh;
-        }
       }
-      
     }
 }
 
-.home__module {
+.devProjects__module {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(12, 1fr);
-  width: 100%;
+  width: 80vw;
   list-style: none;
   display: grid;
-  height: 120vh;
-  
+  height: 200vh;
   &__square {
     grid-column: 1;
     position: relative;
-    &__dev {
-      grid-row: span 7;
+
+    &__devProjects {
+      grid-row: span 4;
       grid-column: 1;
       height: 100%;
       &__block {
@@ -128,21 +108,14 @@
             text-align: center;
             font-size: vars.$smallGutter;
           }
-          &__expand {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.8);
-            transform: scale(0.8);
-            transition: all .2s ease-in-out;
-          }
       }
     }
-    &__me {
-      grid-row: span 5;
+    &__kikiveu {
+      grid-row: span 3;
       grid-column: 2;
       height: 100%;
       &__block {
-        background-image: url('../../assets/images/me.jpg');
+        background-image: url('../../assets/images/dev.jpg');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -153,60 +126,6 @@
         vertical-align: center;
         width: 100%;
         position: relative;
-        &__mainTitle {
-          display: block;
-          width: 100%;
-          position: relative;
-          z-index: 10;
-          &__small__title {
-            display: block;
-            font-size: (vars.$bigGutter)*1.7;
-            font-family: vars.$smallFont;
-            font-style: italic;
-            text-transform: uppercase;
-            text-align: center;
-          }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*7);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
-        }
-         &__description {
-            position: absolute;
-            width: 100%;
-            bottom: (vars.$bigGutter)*1;
-            text-align: center;
-            font-size: vars.$smallGutter;
-          }
-          &__expand {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.65) rotate(20deg);
-            transform: scale(0.65);
-            transition: all .2s ease-in-out;
-          }
-      }
-    }
-    &__uxUi {
-      grid-row: span 5;
-      grid-column: 1; 
-      height: 100%;
-      &__block {
-        background-image: url('../../assets/images/blog.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        color: vars.$darkBrown;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        vertical-align: center;
-        width: 100%;
-        position: relative;
-        color: vars.$yellow;
         &__mainTitle {
           display: block;
           width: 100%;
@@ -222,69 +141,7 @@
           }
           &__big__title {
             display: block;
-            font-size:( vars.$bigGutter*8);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
-        }
-         &__description {
-            position: absolute;
-            width: 100%;
-            bottom: (vars.$bigGutter)*1;
-            text-align: center;
-            font-size: vars.$smallGutter;
-          }
-          &__shrink {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0);
-            transform: scale(0);
-            transition: all .2s ease-in-out;
-          }
-          &__expand {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.8);
-            transform: scale(0.8);
-            transition: all .2s ease-in-out;
-          }
-      }
-    }
-    &__contact {
-      grid-row: 6/span 7;
-      grid-column: 2;
-      height: 100%;
-      &__block {
-        background-image: url('../../assets/images/contact.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        color: vars.$darkBrown;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        vertical-align: center;
-        width: 100%;
-        position: relative;
-        color: vars.$yellow;
-        &__mainTitle {
-          display: block;
-          width: 100%;
-          position: relative;
-          z-index: 10;
-          text-shadow: 1px  1px 2px vars.$lightBrown;
-          &__small__title {
-            display: block;
-            font-size: (vars.$bigGutter)*1.3;
-            font-family: vars.$smallFont;
-            font-style: italic;
-            text-transform: uppercase;
-            text-align: center;
-          }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*11.5);
+            font-size:( vars.$bigGutter*10);
             font-family: vars.$largeFont;
             text-transform: uppercase;
             text-align: center;
@@ -297,12 +154,143 @@
             text-align: center;
             font-size: vars.$smallGutter;
           }
-          &__expand {
+      }
+    }
+    &__blog {
+      grid-row: span 5;
+      grid-column: 1; 
+      height: 100%;
+      &__block {
+        background-image: url('../../assets/images/dev.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        color: vars.$darkBrown;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        vertical-align: center;
+        width: 100%;
+        position: relative;
+        &__mainTitle {
+          display: block;
+          width: 100%;
+          position: relative;
+          z-index: 10;
+          &__small__title {
+            display: block;
+            font-size: (vars.$bigGutter)*1.5;
+            font-family: vars.$smallFont;
+            font-style: italic;
+            text-transform: uppercase;
+            text-align: center;
+          }
+          &__big__title {
+            display: block;
+            font-size:( vars.$bigGutter*10);
+            font-family: vars.$largeFont;
+            text-transform: uppercase;
+            text-align: center;
+          } 
+        }
+         &__description {
             position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.8) rotate(20deg);
-            transform: scale(0.8) rotate(20deg);
-            transition: all .2s ease-in-out;
+            width: 100%;
+            bottom: (vars.$bigGutter)*2;
+            text-align: center;
+            font-size: vars.$smallGutter;
+          }
+      }
+    }
+    &__api{
+      grid-row: 4/span 5;
+      grid-column: 2;
+      height: 100%;
+      &__block {
+        background-image: url('../../assets/images/dev.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        color: vars.$darkBrown;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        vertical-align: center;
+        width: 100%;
+        position: relative;
+        &__mainTitle {
+          display: block;
+          width: 100%;
+          position: relative;
+          z-index: 10;
+          &__small__title {
+            display: block;
+            font-size: (vars.$bigGutter)*1.5;
+            font-family: vars.$smallFont;
+            font-style: italic;
+            text-transform: uppercase;
+            text-align: center;
+          }
+          &__big__title {
+            display: block;
+            font-size:( vars.$bigGutter*10);
+            font-family: vars.$largeFont;
+            text-transform: uppercase;
+            text-align: center;
+          } 
+        }
+         &__description {
+            position: absolute;
+            width: 100%;
+            bottom: (vars.$bigGutter)*2;
+            text-align: center;
+            font-size: vars.$smallGutter;
+          }
+      }
+    }
+    &__toDoList {
+      grid-row: span 3;
+      grid-column: 1;
+      height: 100%;
+      &__block {
+        background-image: url('../../assets/images/dev.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        color: vars.$darkBrown;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        vertical-align: center;
+        width: 100%;
+        position: relative;
+        &__mainTitle {
+          display: block;
+          width: 100%;
+          position: relative;
+          z-index: 10;
+          &__small__title {
+            display: block;
+            font-size: (vars.$bigGutter)*1.5;
+            font-family: vars.$smallFont;
+            font-style: italic;
+            text-transform: uppercase;
+            text-align: center;
+          }
+          &__big__title {
+            display: block;
+            font-size:( vars.$bigGutter*10);
+            font-family: vars.$largeFont;
+            text-transform: uppercase;
+            text-align: center;
+          } 
+        }
+         &__description {
+            position: absolute;
+            width: 100%;
+            bottom: (vars.$bigGutter)*2;
+            text-align: center;
+            font-size: vars.$smallGutter;
           }
       }
     }
