--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -245,8 +245,8 @@
           &__expand {
             position: absolute;
             z-index: 0;
-            -webkit-transform: scale(0.8);
-            transform: scale(0.8);
+            -webkit-transform: scale(0.6) rotate(10deg);
+            transform: scale(0.6)  rotate(10deg);
             transition: all .2s ease-in-out;
           }
       }
