center animations in parent div

--- a/src/microComponents/Header/index.scss
+++ b/src/microComponents/Header/index.scss
@@ -10,5 +10,9 @@
       display: inline-block;
       margin-left: vars.$bigGutter;
       text-align: right;
+      &:hover {
+        transition: all .2s ease-in-out;
+        color: vars.$yellow;
+      }
     }
 }
