--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -131,8 +131,8 @@
           &__expand {
             position: absolute;
             z-index: 0;
-            -webkit-transform: scale(0.8);
-            transform: scale(0.8);
+            -webkit-transform: scale(0.7);
+            transform: scale(0.7);
             transition: all .2s ease-in-out;
           }
       }
@@ -184,8 +184,8 @@
           &__expand {
             position: absolute;
             z-index: 0;
-            -webkit-transform: scale(0.65) rotate(20deg);
-            transform: scale(0.65);
+            -webkit-transform: scale(0.55) rotate(20deg);
+            transform: scale(0.55);
             transition: all .2s ease-in-out;
           }
       }
@@ -235,19 +235,13 @@
             text-align: center;
             font-size: vars.$smallGutter;
           }
-          &__shrink {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0);
-            transform: scale(0);
-            transition: all .2s ease-in-out;
-          }
           &__expand {
             position: absolute;
             z-index: 0;
-            -webkit-transform: scale(0.6) rotate(10deg);
-            transform: scale(0.6)  rotate(10deg);
+            -webkit-transform: scale(0.55) rotate(10deg);
+            transform: scale(0.55)  rotate(10deg);
             transition: all .2s ease-in-out;
+            
           }
       }
     }
@@ -315,4 +309,6 @@
   -webkit-transform: scale(0);
   transform: scale(0);
   transition: all .2s ease-in-out;
+  object-fit: contain;
+  object-position: center;
 }
