composant projet, map sur json

--- a/src/microComponents/SmallTag/index.scss
+++ b/src/microComponents/SmallTag/index.scss
@@ -2,8 +2,8 @@
 
 .smallTag {
   text-transform: uppercase;
-  color: vars.$darkBrown;
-  background-color: vars.$yellow;
+  color: vars.$yellow;
+  background-color: vars.$darkBrown;
   font-size: vars.$smallGutter;
   font-weight: 700;
   border: solid 1px vars.$darkBrown;
