--- a/src/components/Project/index.scss
+++ b/src/components/Project/index.scss
@@ -1,15 +1,14 @@
 @use '../../styles/vars';
 
 
-.me {
+.project{
     display: flex;
     margin-left: (vars.$bigGutter)*5;
     margin-right: (vars.$bigGutter)*5;
-    max-width: 100%;
     &__squares {
       &__flex {
         display: flex;
-        &__projects {
+        &__block {
           width:  40vw;
           background-image: url('../../assets/images/dev.jpg');
           background-repeat: no-repeat;
@@ -45,7 +44,7 @@
         }
         &__aboutMe {
           width:  40vw;
-          background-image: url('../../assets/images/me.jpg');
+          background-image: url('../../assets/images/dev.jpg');
           background-repeat: no-repeat;
           background-position: center;
           background-size: cover;
@@ -55,22 +54,23 @@
     }
 }
 
-.me__module {
+.project__module {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(12, 1fr);
   width: 100%;
   list-style: none;
   display: grid;
-  height: 230vh;
+  height: 80vh;
   &__square {
     grid-column: 1;
     position: relative;
-    &__me {
-      grid-row: span 4;
+
+    &__project{
+      grid-row: span 12;
       grid-column: 1;
       height: 100%;
       &__block {
-        background-image: url('../../assets/images/me.jpg');
+        background-image: url('../../assets/images/dev.jpg');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -109,108 +109,101 @@
             text-align: center;
             font-size: vars.$smallGutter;
           }
-          &__expand {
-            position: absolute;
-            z-index: 0;
-            -webkit-transform: scale(0.8);
-            transform: scale(0.8);
-            transition: all .2s ease-in-out;
-          }
       }
     }
-    &__aspirations {
-      grid-row: span 3;
-      grid-column: 2;
-      height: 100%;
-      &__block {
-        background-color: vars.$orange;
-        color: vars.$beige;
-        height: 100%;
-        align-items: center;
-        vertical-align: center;
-        width: 100%;
-        position: relative;
-        padding: (vars.$bigGutter)*2;
-        display: flex;
-        align-items: center;
-        vertical-align: center;
-        &__description {
-          font-family: vars.$smallFont;
-          font-size: (vars.$bigGutter)/1.3;
-          line-height: (vars.$bigGutter);
-          text-align: center;
-          font-weight: 400;
-        }
-      }
-    }
-    &__competences {
-      grid-row: span 5;
-      grid-column: 1; 
-      height: 100%;
-      &__block {
-        background-color: vars.$lightBrown;
-        color: vars.$darkBrown;
-        height: 100%;
-        align-items: center;
-        vertical-align: center;
-        width: 100%;
-        position: relative;
-        color: vars.$beige;
-        padding: (vars.$bigGutter)*2;
-      }
-    }
-    &__experience {
-      grid-row: 4/span 5;
-      grid-column: 2;
-      height: 100%;
-      &__block {
-        background-color: vars.$darkRed;
-        color: vars.$darkBrown;
-        height: 100%;
-        align-items: center;
-        vertical-align: center;
-        width: 100%;
-        position: relative;
-        color: vars.$beige;
-        padding: (vars.$bigGutter)*2;
-      }
-    }
-    &__hobbies {
-      grid-row: span 3;
+    &__project{
+      grid-row: span 12;
       grid-column: 1;
       height: 100%;
       &__block {
-        background-color: vars.$orange;
-        color: vars.$darkBrown;
+        background-image: url('../../assets/images/contact.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        color: vars.$yellow;
         height: 100%;
+        display: flex;
         align-items: center;
         vertical-align: center;
         width: 100%;
         position: relative;
-        padding: (vars.$bigGutter)*2;
+        &__mainTitle {
+          display: block;
+          width: 100%;
+          position: relative;
+          z-index: 10;
+          &__small__title {
+            display: block;
+            font-size: (vars.$bigGutter)*1.5;
+            font-family: vars.$smallFont;
+            font-style: italic;
+            text-transform: uppercase;
+            text-align: center;
+          }
+          &__big__title {
+            display: block;
+            font-size:( vars.$bigGutter*10);
+            font-family: vars.$largeFont;
+            text-transform: uppercase;
+            text-align: center;
+          } 
+        }
+         &__description {
+            position: absolute;
+            width: 100%;
+            bottom: (vars.$bigGutter)*2;
+            text-align: center;
+            font-size: vars.$smallGutter;
+          }
       }
     }
-    &__formation {
-      grid-row: 9/span 5;
-      grid-column: 2;
+    &__form {
+      grid-row: span 12;
+      grid-column: 2; 
       height: 100%;
       &__block {
         background-color: vars.$yellow;
         color: vars.$darkBrown;
         height: 100%;
+        display: flex;
         align-items: center;
         vertical-align: center;
+        width: 100%;
         position: relative;
-        padding: (vars.$bigGutter)*2;
+        padding: vars.$bigGutter;
+        &__form {
+          width: 100%;
+          &__labelBlock {
+            &__label  {
+              display: block;
+              margin-bottom: vars.$smallGutter;
+            }
+            &__input {
+              display: inline-block;
+              margin-bottom: vars.$bigGutter;
+              width: 100%;
+              background-color: vars.$darkBrown;
+              padding: vars.$smallGutter;
+              border-radius: vars.$smallGutter;
+              border: none;
+              color: vars.$beige;
+              &__message {
+                display: inline-block;
+              margin-bottom: vars.$bigGutter;
+              width: 100%;
+              background-color: vars.$darkBrown;
+              padding: vars.$smallGutter;
+              border-radius: vars.$smallGutter;
+              border: none;
+              color: vars.$beige;
+              }
+            }
+          }
+          }
+          
+        }
+        
       }
     }
   }
-}
 
-.cssDefault {
-  position: absolute;
-  z-index: 0;
-  -webkit-transform: scale(0);
-  transform: scale(0);
-  transition: all .2s ease-in-out;
-}
