animation on eye on build

--- a/src/microComponents/Header/index.scss
+++ b/src/microComponents/Header/index.scss
@@ -6,6 +6,19 @@
     justify-content: flex-end;
     height: (vars.$bigGutter)*4;
     align-items: center;
+    &__logoContainer {
+      width: 100px;
+      height: 100px;
+      background-color: vars.$yellow;
+      position: relative;
+      display: inline-block;
+      &__circle {
+        position: absolute;
+        bottom: 17px;
+        right: 10px;
+
+      }
+    }
     &__link {
       display: inline-block;
       margin-left: vars.$bigGutter;
