--- a/src/microComponents/Intro/index.scss
+++ b/src/microComponents/Intro/index.scss
@@ -7,6 +7,8 @@
     font-family: vars.$largeFont ;
     font-size: (vars.$bigGutter)*5;
    font-weight: 400;
+   text-shadow: 5px 5px vars.$lightBrown;
+  transition: all .2s ease-in-out;
   }
   &__skills {
     display: flex;
