--- a/src/components/DevProjects/index.scss
+++ b/src/components/DevProjects/index.scss
@@ -19,7 +19,6 @@
             height: 80%;
             justify-content: center;
             align-items: center;
-
             &__top {
               font-family: vars.$smallFont;
               color: vars.$darkBrown;
@@ -112,10 +111,11 @@
     }
     &__kikiveu {
       grid-row: span 3;
-      grid-column: 2;
+      grid-column: 2; 
       height: 100%;
+      position: relative;
       &__block {
-        background-image: url('../../assets/images/dev.jpg');
+        background-image: url('../../assets/images/devProjects/kikiveu_screenshot.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -126,42 +126,62 @@
         vertical-align: center;
         width: 100%;
         position: relative;
+        
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
+      &__content {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        backdrop-filter: grayscale(50%) blur(1px) brightness(0.6);
+        -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+        &:hover {
+          backdrop-filter: grayscale(30%) blur(0px) brightness(0.9);
+          -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+        }
         &__mainTitle {
-          display: block;
-          width: 100%;
           position: relative;
           z-index: 10;
+          text-align: center;
+          margin: 0 auto;
+          
           &__small__title {
-            display: block;
             font-size: (vars.$bigGutter)*1.5;
-            font-family: vars.$smallFont;
-            font-style: italic;
             text-transform: uppercase;
-            text-align: center;
+            
           }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*10);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
         }
          &__description {
             position: absolute;
             width: 100%;
             bottom: (vars.$bigGutter)*2;
             text-align: center;
-            font-size: vars.$smallGutter;
           }
       }
     }
-    &__blog {
-      grid-row: span 5;
+    &__portfolio2021 {
+      grid-row: span 3;
       grid-column: 1; 
       height: 100%;
+      position: relative;
       &__block {
-        background-image: url('../../assets/images/dev.jpg');
+        background-image: url('../../assets/images/devProjects/portfolio_screenshot.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -172,33 +192,52 @@
         vertical-align: center;
         width: 100%;
         position: relative;
+        
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
+      &__content {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        backdrop-filter: grayscale(50%) blur(1px) brightness(0.6);
+        -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+        &:hover {
+          backdrop-filter: grayscale(30%) blur(0px) brightness(0.9);
+          -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+        }
         &__mainTitle {
-          display: block;
-          width: 100%;
           position: relative;
           z-index: 10;
+          text-align: center;
+          margin: 0 auto;
+          
           &__small__title {
-            display: block;
             font-size: (vars.$bigGutter)*1.5;
-            font-family: vars.$smallFont;
-            font-style: italic;
             text-transform: uppercase;
-            text-align: center;
+            
           }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*10);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
         }
          &__description {
             position: absolute;
             width: 100%;
             bottom: (vars.$bigGutter)*2;
             text-align: center;
-            font-size: vars.$smallGutter;
           }
       }
     }
@@ -294,6 +333,72 @@
           }
       }
     }
+    &__portfolio2020 {
+      grid-row: span 3;
+      grid-column: 2; 
+      height: 100%;
+      position: relative;
+      &__block {
+        background-image: url('../../assets/images/devProjects/portfolio_webdesign_screenshot.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        color: vars.$darkBrown;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        vertical-align: center;
+        width: 100%;
+        position: relative;
+        
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
+      &__content {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        backdrop-filter: grayscale(50%) blur(1px) brightness(0.6);
+        -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+        &:hover {
+          backdrop-filter: grayscale(30%) blur(0px) brightness(0.9);
+          -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+        }
+        &__mainTitle {
+          position: relative;
+          z-index: 10;
+          text-align: center;
+          margin: 0 auto;
+          
+          &__small__title {
+            font-size: (vars.$bigGutter)*1.5;
+            text-transform: uppercase;
+            
+          }
+        }
+         &__description {
+            position: absolute;
+            width: 100%;
+            bottom: (vars.$bigGutter)*2;
+            text-align: center;
+          }
+      }
+    }
   }
 }
 
@@ -304,3 +409,4 @@
   transform: scale(0);
   transition: all .2s ease-in-out;
 }
+
