content devprojects ok

--- a/src/components/UxUiProjects/index.scss
+++ b/src/components/UxUiProjects/index.scss
@@ -68,7 +68,7 @@
       grid-column: 1;
       height: 100%;
       &__block {
-        background-image: url('../../assets/images/uxUi/illu_japan_style_vignette.jpg');
+        background-image: url('../../assets/images/devProjects/kikiveu_screenshot.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
