--- a/src/components/Project/index.scss
+++ b/src/components/Project/index.scss
@@ -10,7 +10,6 @@
         display: flex;
         &__block {
           width:  40vw;
-          background-image: url('../../assets/images/dev.jpg');
           background-repeat: no-repeat;
           background-position: center;
           background-size: cover;
@@ -42,14 +41,6 @@
             text-transform: uppercase;
           }
         }
-        &__aboutMe {
-          width:  40vw;
-          background-image: url('../../assets/images/dev.jpg');
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: cover;
-          height: 70vh;
-        }
       }
     }
 }
@@ -60,17 +51,65 @@
   width: 100%;
   list-style: none;
   display: grid;
-  height: 80vh;
+  height: auto;
   &__square {
     grid-column: 1;
     position: relative;
 
     &__project {
-      grid-row: span 12;
+      grid-row: 1/span 5;
       grid-column: 1;
-      height: 100%;
+        overflow:hidden; 
+        padding-bottom:56.25%; 
+        position:relative; 
+        height:auto;
+        width: 100%;
       &__block {
-        background-image: url('../../assets/images/dev.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        color: vars.$darkBrown;
+        left:0; 
+        top:0; 
+        height:100%;
+        width:100%;
+        position:absolute;
+        &__mainTitle {
+          display: block;
+          width: 100%;
+          position: relative;
+          z-index: 10;
+          &__small__title {
+            display: block;
+            font-size: (vars.$bigGutter)*1.5;
+            font-family: vars.$smallFont;
+            font-style: italic;
+            text-transform: uppercase;
+            text-align: center;
+          }
+          &__big__title {
+            display: block;
+            font-size:( vars.$bigGutter*10);
+            font-family: vars.$largeFont;
+            text-transform: uppercase;
+            text-align: center;
+          } 
+        }
+         &__description {
+            position: absolute;
+            width: 100%;
+            bottom: (vars.$bigGutter)*2;
+            text-align: center;
+            font-size: vars.$smallGutter;
+          }
+      }
+    }
+
+    &__image {
+      grid-row: 6/span 7;
+      grid-column: 1;
+      &__block {
+        background-image: url('../../assets/images/devProjects/kikiveu_screenshot.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -111,56 +150,11 @@
           }
       }
     }
-    &__project{
-      grid-row: span 12;
-      grid-column: 1;
-      height: 100%;
-      &__block {
-        background-image: url('../../assets/images/contact.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        color: vars.$yellow;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        vertical-align: center;
-        width: 100%;
-        position: relative;
-        &__mainTitle {
-          display: block;
-          width: 100%;
-          position: relative;
-          z-index: 10;
-          &__small__title {
-            display: block;
-            font-size: (vars.$bigGutter)*1.5;
-            font-family: vars.$smallFont;
-            font-style: italic;
-            text-transform: uppercase;
-            text-align: center;
-          }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*10);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
-        }
-         &__description {
-            position: absolute;
-            width: 100%;
-            bottom: (vars.$bigGutter)*2;
-            text-align: center;
-            font-size: vars.$smallGutter;
-          }
-      }
-    }
+
+
     &__description {
       grid-row: span 12;
       grid-column: 2; 
-      height: 100%;
       &__block {
         background-color: vars.$lightBrown;
         color: vars.$beige;
@@ -179,9 +173,7 @@
             align-self: flex-end;
             }
           }
-          
-        }
-        
+        } 
       }
     }
   }
